[css:cwd] fix visible thin contents on top of the fixed header
ref. #1486 https://github.com/Studio-42/elFinder/issues/1486#issuecomment-227178850

--- a/css/cwd.css
+++ b/css/cwd.css
@@ -335,6 +335,18 @@
 	overflow: hidden;
 }
 
+.elfinder-cwd-wrapper-list.elfinder-cwd-fixheader:before {
+	content: '';
+	position: absolute;
+	width: 100%;
+	top: 0;
+	height: 3px;
+	background-color: white;
+}
+.elfinder-droppable-active + .elfinder-cwd-wrapper-list.elfinder-cwd-fixheader:before {
+	background-color: #8cafed;
+}
+
 .elfinder .elfinder-workzone div.elfinder-cwd-fixheader table {
 	table-layout: fixed;
 }
